<resources>
    <string name="app_name">Tiemed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="id">ID</string>
    <string name="state">State</string>
    <string name="save">Save</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="sort">Sort</string>
    <string name="groupitem">Group</string>
    <string name="filterItem">Filter</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="App">App</string>
    <string name="dark_mode">darkMode</string>
    <string name="user">User</string>
    <string name="resetPasswordButton">resetPasswordButton</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="siganture">Signature</string>
    <string-array name="spinner_array">
        <item>Item1</item>
        <item>Item2</item>
        <item>Item3</item>
    </string-array>

    <!-- Signature View content description -->

    <string name="signature_view_content_description">Signature View is area with signature</string>
    <string name="signature">Signature</string>
    <string name="signature_request_key">request_key</string>
    <string name="defect_decription">Defect description</string>
    <string name="defect_description">Defect description</string>
    <string name="name">Name</string>
    <string name="manufacturer">Manufactuer</string>
    <string name="model">Model</string>
    <string name="inventory_number">Inventory number</string>
    <string name="serial_number">Serial number</string>
    <string name="localization">Localization</string>
    <string name="device">Device</string>
    <string name="not_required">Not required</string>
    <string name="failed">Failed</string>
    <string name="passed">Passed</string>
    <string name="electrical_safety_test">Electrical safety test</string>
    <string name="ward">Ward</string>
    <string name="opening_date">Opening date</string>
    <string name="repair">Repair</string>
    <string name="defect">Defect</string>
    <string name="parts">Parts</string>
    <string name="repairing_date">Repairing date</string>
    <string name="closing_date">Closing date</string>
    <string name="photos">Photos</string>
    <string name="hospital">Hospital</string>
    <string name="repair_description">Repair description</string>
    <string name="WAIT_FOR_IMPLEMENTATION">Waiting for implementation</string>
    <string name="repair_hospital_spinner">Repair Hospital Spinner</string>
    <string name="filter_repair">Repair filter</string>
    <string name="part_description">Part description</string>
    <string name="inspection_date">Inspection date</string>
    <string name="comment">Comment</string>
    <string name="inspection_hospital_spinner">Inspection Hospital Spinner</string>
</resources>