<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/repairSortItem"
        android:title="@string/sort"
        app:showAsAction="always"
        android:icon="@drawable/sort_icon"/>
    <item
        android:id="@+id/repairGroupItem"
        android:title="@string/groupitem"
        app:showAsAction="always"
        android:icon="@drawable/group_icon"/>
    <item
        android:id="@+id/repairFilterItem"
        android:title="@string/filterItem"
        app:showAsAction="always"
        android:icon="@drawable/filter_icon"/>


    <item
        android:title="@string/repair_hospital_spinner"
        android:id="@+id/repairListHospitalSpinner"
        app:showAsAction="always" />
</menu>