<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/inspectionListHospitalSpinner"
        android:title="@string/inspection_hospital_spinner"
        app:actionViewClass="android.widget.Spinner"
        app:showAsAction="always" />

    <item
        android:id="@+id/inspectionSortItem"
        android:icon="@drawable/sort_icon"
        android:title="@string/sort"
        app:showAsAction="withText" />
    <item
        android:id="@+id/inspectionGroupItem"
        android:title="@string/groupitem"
        app:showAsAction="withText"
        android:icon="@drawable/group_icon"/>
    <item
        android:id="@+id/inspectionFilterItem"
        android:title="@string/filterItem"
        app:showAsAction="withText"
        android:icon="@drawable/filter_icon"/>


</menu>