<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
            <item
                android:id="@+id/settingsItem"
                android:icon="@drawable/settings_icon"
                android:title="@string/settings"
                app:showAsAction="never|withText" />
            <item
                android:id="@+id/logOutItem"
                android:icon="@drawable/logout_icon"
                android:title="@string/log_out"
                app:showAsAction="never|withText" />
            <item
                android:id="@+id/aboutItem"
                android:icon="@drawable/info_icon"
                android:title="@string/about"
                app:showAsAction="never|withText" />
</menu>