<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".presentation.feature_repairs.ui.EditRepairFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

<!--            ID-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/editRepairIdTextView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/default_height"
                    android:gravity="center_vertical|start"
                    android:text="ID: "
                    android:textSize="28sp"/>

                <ImageButton
                    android:id="@+id/editRepairEditSaveButton"
                    android:layout_width="@dimen/default_height"
                    android:layout_height="@dimen/default_height"
                    android:layout_marginEnd="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/edit_icon"
                    android:background="@android:color/transparent"/>

                <ImageButton
                    android:id="@+id/editRepairCancelButton"
                    android:layout_width="@dimen/default_height"
                    android:layout_height="@dimen/default_height"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/cancel_icon" />

            </LinearLayout>


            <!--            Opening date-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/opening_date" />

                <Button
                    android:id="@+id/editRepairOpeningDateButton"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/opening_date" />

            </LinearLayout>

            <TextView
                style="@style/DividierTitle"
                android:text="@string/device" />
            <View
                style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editRepairNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editRepairManufacturerEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/manufacturer" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editRepairModelTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editRepairModelEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/model" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editRepairInventoryNumberTextIputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editRepairInventoryNumberEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/inventory_number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editRepairNameTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editRepairSerialNumberTextIputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editRepairSerialNumberEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/serial_number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editRepairManufacturerTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                style="@style/DividierTitle"
                android:text="@string/localization" />
            <View
                style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <Spinner
                    android:id="@+id/editRepairHospitalSpinner"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editRepairWardTextInputLayout"
                    style="@style/EditTextStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editRepairWardEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ward" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                style="@style/DividierTitle"
                android:text="@string/defect" />
            <View
                style="@style/Divider" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editRepairDefectDescriptionTextInputLayout"
                    style="@style/EditTextStyle"
                    android:layout_height="98dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_repair_defect_description_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:hint="@string/defect_description"
                        android:minLines="3" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                style="@style/DividierTitle"
                android:text="@string/repair" />
            <View
                style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editRepairRepairDescriptionTextInputLayout"
                    style="@style/EditTextStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editRepairRepairDescriptionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:hint="@string/repair_description"
                        android:minLines="3" />
                </com.google.android.material.textfield.TextInputLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="@string/repairing_date" />

                        <Button
                            android:id="@+id/editRepairRepairingDateButton"
                            style="@style/Widget.AppCompat.EditText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal|center_vertical"
                            android:text="@string/repairing_date" />

                    </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/editRepairPartDescriptionTextInputLayout"
                    style="@style/EditTextStyle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editRepairPartDescriptionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:hint="@string/part_description"
                        android:minLines="3" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                style="@style/DividierTitle"
                android:text="Result" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <TextView
                    style="@style/SectionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/state" />

                <Spinner
                    android:id="@+id/editRepairStateSpinner"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp" />

                <TextView
                    style="@style/SectionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/electrical_safety_test" />

                <RadioGroup
                    android:id="@+id/editRepairESTRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/editRepairESTPassedRadioButton"
                        style="@style/RadioButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/passed" />

                    <RadioButton
                        android:id="@+id/editRepairESTFailedRadioButton"
                        style="@style/RadioButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/failed" />

                    <RadioButton
                        android:id="@+id/editRepairESTNotApplicableRadioButton"
                        style="@style/RadioButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/not_required" />
                </RadioGroup>

                <ImageButton
                    android:id="@+id/editRepairSignatureImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/signature_image_height"
                    android:scaleType="centerInside"
                    android:layout_marginTop="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/closing_date" />

                    <Button
                        android:id="@+id/editRepairClosingDateButton"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/closing_date" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>