<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/cell_height"
    android:layout_margin="@dimen/cell_margin"
    android:background="@android:color/transparent"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--        State marker-->
        <View
            android:id="@+id/repairRowStateMarker"
            android:layout_width="@dimen/state_marker_width"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

<!--        Id-->
        <TextView
            android:id="@+id/repairRowIdTextView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="ID"
            android:layout_margin="5dp"
            app:layout_constraintStart_toEndOf="@+id/repairRowStateMarker"
            app:layout_constraintTop_toTopOf="parent" />

<!--        Name-->
        <TextView
            android:id="@+id/repairRowNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Nazwa"
            app:layout_constraintStart_toEndOf="@+id/repairRowIdTextView"
            app:layout_constraintTop_toTopOf="parent" />

<!--        Opening date -->
        <TextView
            android:id="@+id/repairRowOpeningDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Opening day:"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--        Manufactuer-->
        <TextView
            android:id="@+id/repairRowManufacturerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manufacturer"
            android:layout_margin="5dp"
            app:layout_constraintStart_toEndOf="@+id/repairRowStateMarker"
            app:layout_constraintTop_toBottomOf="@+id/repairRowIdTextView" />

<!--        Model-->
            <TextView
            android:id="@+id/repairRowModelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/model"
            app:layout_constraintStart_toEndOf="@+id/repairRowManufacturerTextView"
            app:layout_constraintTop_toBottomOf="@+id/repairRowIdTextView" />

<!--        Serial number-->
            <TextView
            android:id="@+id/repairRowSNTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SN:"
            android:layout_margin="5dp"
            app:layout_constraintStart_toEndOf="@+id/repairRowStateMarker"
            app:layout_constraintTop_toBottomOf="@+id/repairRowManufacturerTextView" />

<!--        Inventory number-->
        <TextView
            android:id="@+id/repairRowINTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="InventoryNumber:"
            app:layout_constraintStart_toEndOf="@+id/repairRowSNTextView"
            app:layout_constraintTop_toBottomOf="@+id/repairRowManufacturerTextView" />

        <!--            Ward-->
        <TextView
            android:id="@+id/repairRowWardTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/ward"
            app:layout_constraintTop_toBottomOf="@+id/repairRowSNTextView"
            app:layout_constraintStart_toEndOf="@id/repairRowStateMarker" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>